# happylist

./: .gitignore  pyproject.toml
polylist/: auth.py  common.py  emoji_from_todo.py  lists.py  logging_backend.py  main.py  models.py
polylist/static/: site.webmanifest
tests/: test_emoji.py  test_main.py
